Process Swap on Navigation causes many webpages to hang due to attempted process swap for iframe navigations. <rdar://problem/39162236> and https://bugs.webkit.org/show_bug.cgi?id=184318

Reviewed by Andy Estes.

Source/WebKit:

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::receivedPolicyDecision): Don't consider a swap if the navigation is not in the main frame.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:
(-[PSONMessageHandler userContentController:didReceiveScriptMessage:]):
(-[PSONScheme addMappingFromURLString:toData:]):
(-[PSONScheme webView:startURLSchemeTask:]):


Canonical link: https://commits.webkit.org/199898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230315 268f45cc-cd09-0410-ab3c-d52691b4dbfc